--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "preset": "react-native"
   },
   "dependencies": {
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0"
+    "immutable": "^3.8.2",
+    "react": "^16.3.0",
+    "react-native": "^0.54.2",
+    "react-native-google-places-autocomplete": "^1.3.6",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.2.5"
   }
 }
