--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "immutable": "^3.8.2",
     "react": "^16.3.0",
     "react-native": "^0.54.2",
