--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.3.0",
     "react-native": "^0.54.2",
     "react-native-google-places-autocomplete": "^1.3.6",
+    "react-native-htmlview": "^0.12.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
