--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
+    "moment": "^2.22.1",
     "react": "^16.3.0",
     "react-native": "^0.54.2",
+    "react-native-auth0": "^1.2.2",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-htmlview": "^0.12.1",
+    "react-native-maps": "^0.21.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
