--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
+    compile project(':appcenter-crashes')
+    compile project(':appcenter-analytics')
+    compile project(':appcenter')
     compile project(':react-native-auth0')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
