--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,12 @@ target 'recommendapp' do
   pod 'react-native-google-maps', path: rn_maps_path  # Remove this line if you don't want to support GoogleMaps on iOS
   pod 'GoogleMaps'  # Remove this line if you don't want to support GoogleMaps on iOS
   pod 'Google-Maps-iOS-Utils' # Remove this line if you don't want to support GoogleMaps on iOS
+
+  # Pods for AppCenter
+  pod 'AppCenter/Crashes', '~> 1.6.0'
+  pod 'AppCenter/Analytics', '~> 1.6.0'
+  pod 'AppCenterReactNativeShared', '~> 1.5.0'
+  platform :ios, '9.0'
 end
 
 post_install do |installer|
