--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-action-buffer": "^1.2.0",
     "redux-immutable": "^4.0.0",
+    "redux-persist": "^5.9.1",
+    "redux-persist-immutable": "^4.3.1",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.2.5"
   }
