--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,8 +6,8 @@ target 'recommendapp' do
   rn_maps_path = '../node_modules/react-native-maps'
 
   # See http://facebook.github.io/react-native/docs/integration-with-existing-apps.html#configuring-cocoapods-dependencies
-  pod 'yoga', path: "#{rn_path}/ReactCommon/yoga/yoga.podspec"
-  pod 'React', path: rn_path, subspecs: [
+  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga/yoga.podspec'
+  pod 'React', :path => '../node_modules/react-native', subspecs: [
     'Core',
     'CxxBridge',
     'DevSupport',
@@ -26,10 +26,6 @@ target 'recommendapp' do
   # React Native third party dependencies podspecs
   pod 'DoubleConversion', :podspec => "#{rn_path}/third-party-podspecs/DoubleConversion.podspec"
   pod 'glog', :podspec => "#{rn_path}/third-party-podspecs/glog.podspec"
-  # If you are using React Native <0.54, you will get the following error:
-  # "The name of the given podspec `GLog` doesn't match the expected one `glog`"
-  # Use the following line instead:
-  #pod 'GLog', :podspec => "#{rn_path}/third-party-podspecs/GLog.podspec"
   pod 'Folly', :podspec => "#{rn_path}/third-party-podspecs/Folly.podspec"
 
   # react-native-maps dependencies
