Update yoga in podfile

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,6 @@ target 'recommendapp' do
   rn_maps_path = '../node_modules/react-native-maps'
 
   # See http://facebook.github.io/react-native/docs/integration-with-existing-apps.html#configuring-cocoapods-dependencies
-  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga/yoga.podspec'
   pod 'React', :path => '../node_modules/react-native', subspecs: [
     'Core',
     'CxxBridge',
@@ -23,6 +22,8 @@ target 'recommendapp' do
     'RCTWebSocket',
   ]
 
+  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
+
   # React Native third party dependencies podspecs
   pod 'DoubleConversion', :podspec => "#{rn_path}/third-party-podspecs/DoubleConversion.podspec"
   pod 'glog', :podspec => "#{rn_path}/third-party-podspecs/glog.podspec"
@@ -30,9 +31,9 @@ target 'recommendapp' do
 
   # react-native-maps dependencies
   pod 'react-native-maps', path: rn_maps_path
-  pod 'react-native-google-maps', path: rn_maps_path  # Remove this line if you don't want to support GoogleMaps on iOS
-  pod 'GoogleMaps'  # Remove this line if you don't want to support GoogleMaps on iOS
-  pod 'Google-Maps-iOS-Utils' # Remove this line if you don't want to support GoogleMaps on iOS
+  pod 'react-native-google-maps', path: rn_maps_path
+  pod 'GoogleMaps'
+  pod 'Google-Maps-iOS-Utils'
 
   # Pods for AppCenter
   pod 'AppCenter/Crashes', '~> 1.6.0'
