--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.3.0",
     "react-native": "^0.54.2",
     "react-native-auth0": "^1.2.2",
+    "react-native-code-push": "^5.3.2",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-htmlview": "^0.12.1",
     "react-native-maps": "^0.21.0",
